# loop

./: CMakeLists.txt  README.md
resources/: resources.qrc
src/: D3D11Renderer.cpp  D3D11Renderer.h  FFmpegPlayer.cpp  FFmpegPlayer.h  FloatingVideoPlayer.cpp  FloatingVideoPlayer.h  MpvWidget.cpp  MpvWidget.h  OpenGLRenderer.cpp  OpenGLRenderer.h  VideoRendererBase.h  VideoRendererFactory.cpp  VideoWidget.cpp  VideoWidget.h  main.cpp
